feat: Refactor UI and remove AI
This commit makes several UI and structural improvements:

- **Updated HTML:** Enhanced viewport meta tag for better mobile responsiveness, changed the title to "Ethiopia Tax Portal," and added an Ethiopian flag favicon. Imported "Plus Jakarta Sans" for improved typography and added custom styles for scrollbar hiding and input number appearance.
- **Simplified App Component:** Removed the Google GenAI initialization and all related chat functionalities. This streamlines the application by focusing solely on tax calculations.
- **Input Handling:** Updated `handleInputChange` to specifically expect `HTMLInputElement` and removed the handling for select elements, as all inputs are now text-based number inputs.
- **General Cleanup:** Removed unused imports and state variables.

--- a/index.html
+++ b/index.html
@@ -1,16 +1,37 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ethiopia Tax Calculator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <title>Ethiopia Tax Portal</title>
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🇪🇹</text></svg>">
     <script src="https://cdn.tailwindcss.com"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
     <style>
+        :root {
+            --emerald-800: #064e3b;
+            --emerald-700: #047857;
+        }
         body {
-            font-family: 'Inter', sans-serif;
+            font-family: 'Plus Jakarta Sans', sans-serif;
             background-color: #f8fafc;
+            -webkit-tap-highlight-color: transparent;
+        }
+        /* Better touch scroll for mobile */
+        .scrollbar-hide::-webkit-scrollbar {
+            display: none;
+        }
+        .scrollbar-hide {
+            -ms-overflow-style: none;
+            scrollbar-width: none;
+        }
+        input::-webkit-outer-spin-button,
+        input::-webkit-inner-spin-button {
+            -webkit-appearance: none;
+            margin: 0;
+        }
+        input[type=number] {
+            -moz-appearance: textfield;
         }
     </style>
 <script type="importmap">
